--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -1,4 +1,4 @@
-# Instruct the application to use the "local" profile when running locally.
+# Configure the application to use the "local" profile when running locally.
 spring:
   application.name: spring-boot-restful-sample
   profiles.active: local
